# tappl

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  tap.spec
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-exe.yml  ci.yml  publish.yml
src/tappl/: __init__.py  _version.py  app.py
src/tapplayer/: __init__.py
