[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tappl"
description = "TAP: Terminal Audio Player"
version = "v0.1.0"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "TAP contributors" }]
keywords = ["audio", "cli", "ffmpeg", "music", "rich", "terminal", "tui"]
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Terminals",
]
dependencies = [
    "miniaudio>=1.61",
    "numpy>=2.4.3",
    "rich>=14.3.3",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "twine>=6.1.0",
]

[project.scripts]
tappl = "tappl:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "tappl._version.__version__" }
